[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/entities/cybork/cybork.png" type="Texture" id=1]
[ext_resource path="res://assets/entities/cybork/Cybork.gd" type="Script" id=2]
[ext_resource path="res://assets/entities/cybork/states/idle.gd" type="Script" id=3]
[ext_resource path="res://assets/state_machine/state_machine.gd" type="Script" id=4]
[ext_resource path="res://assets/entities/cybork/states/idle_walk.gd" type="Script" id=5]
[ext_resource path="res://assets/entities/cybork/states/chase.gd" type="Script" id=6]
[ext_resource path="res://assets/entities/cybork/states/attack.gd" type="Script" id=7]
[ext_resource path="res://assets/entities/cybork/states/recoil.gd" type="Script" id=8]
[ext_resource path="res://assets/entities/cybork/states/faint.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "blue_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68, 69 ]
}

[sub_resource type="Animation" id=3]
resource_name = "blue_walk"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 41 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]
length = 2.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.9, 1, 1.1, 1.5, 1.6, 1.7, 2.1, 2.2, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 52, 44, 48, 44, 48, 49, 50, 51, 53, 51, 53, 51 ]
}

[sub_resource type="Animation" id=10]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 120.0
height = 452.0

[sub_resource type="GDScript" id=12]
script/source = "extends Area2D

onready var cybork = get_parent()

func _on_body_entered(body):
	cybork.attack_target = body

func _on_body_exited(body):
	if body == cybork.attack_target:
		cybork.attack_target = null
"

[sub_resource type="CapsuleShape2D" id=13]
radius = 53.237
height = 72.3761

[node name="Cybork" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="flip_h_remotes" type="Node2D" parent="."]

[node name="attack_area_remote" type="RemoteTransform2D" parent="flip_h_remotes"]
position = Vector2( -80.237, -3.57491 )
remote_path = NodePath("../../attack_area")
update_rotation = false
update_scale = false

[node name="ground_check_remote" type="RemoteTransform2D" parent="flip_h_remotes"]
position = Vector2( -46.2886, 68.5966 )
remote_path = NodePath("../../ground_check")
update_rotation = false
update_scale = false

[node name="detection_area_remote" type="RemoteTransform2D" parent="flip_h_remotes"]
position = Vector2( -197, -28 )
remote_path = NodePath("../../detection_area")
update_rotation = false
update_scale = false

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 1 )
vframes = 12
hframes = 6
frame = 58

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 1 )
anims/blue_idle = SubResource( 2 )
anims/blue_walk = SubResource( 3 )
anims/faint = SubResource( 4 )
anims/flee = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/recoil = SubResource( 7 )
anims/run = SubResource( 8 )
anims/wake = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -40, 85, -80, 8, 0, -32, 80, 8, 48, 85 )

[node name="detection_area" type="Area2D" parent="."]
position = Vector2( -197, -28 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
rotation = 1.5708
shape = SubResource( 11 )

[node name="attack_area" type="Area2D" parent="."]
position = Vector2( -80.237, -3.57491 )
collision_layer = 0
collision_mask = 2
script = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 13 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
default_state = "idle"

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="idle_walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="chase" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="recoil" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="faint" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="ground_check" type="RayCast2D" parent="."]
position = Vector2( -46.2886, 68.5966 )
enabled = true
cast_to = Vector2( 0, 32 )
[connection signal="body_entered" from="detection_area" to="." method="on_body_entered_detection_area"]
[connection signal="body_entered" from="attack_area" to="attack_area" method="_on_body_entered"]
[connection signal="body_exited" from="attack_area" to="attack_area" method="_on_body_exited"]
